# dealii-parallel-tests

./: CMakeLists.txt  dummy.cc  test_1.mpirun=4.output  test_2.output
